src/azure-cli/azure/cli/command_modules/network/tests/profile_2017_03_09/recordings/test_network_extended_nsg.yaml
interactions:
- request:
    body: null
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-resource/21.1.0b1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2016-02-01
  response:
    body:
      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2023-03-02T07:08:51Z"},"properties":{"provisioningState":"Succeeded"}}'
    headers:
      cache-control:
      - no-cache
      content-length:
      - '288'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:08:55 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
    status:
      code: 200
      message: OK
- request:
    body: '{"location": "westus"}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      Content-Length:
      - '22'
      Content-Type:
      - application/json
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\":
        \"5045b165-8f6e-4f8c-b15c-c943c9b22db6\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\"\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\"\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\"\r\n        }\r\n      },\r\n      {\r\n
        \       \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\"\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\"\r\n
        \       }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"b6786f15-95b5-497d-adbf-50368dc35320\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\"\r\n        }\r\n      }\r\n    ]\r\n
        \ }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/76fe31f0-732d-40bc-a040-aa97ba743da1?api-version=2015-06-15
      cache-control:
      - no-cache
      content-length:
      - '5629'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:01 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 7bcec136-6e48-4674-8b69-abb23d21b656
      x-ms-ratelimit-remaining-subscription-writes:
      - '1198'
    status:
      code: 201
      message: ''
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/76fe31f0-732d-40bc-a040-aa97ba743da1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:04 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 15119883-2d63-48ee-8138-9bc9922d212e
    status:
      code: 200
      message: ''
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
        \"5045b165-8f6e-4f8c-b15c-c943c9b22db6\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\"\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\"\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\"\r\n        }\r\n      },\r\n      {\r\n
        \       \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\"\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\"\r\n
        \       }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\"\r\n        }\r\n      }\r\n    ]\r\n
        \ }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '5636'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:05 GMT
      etag:
      - W/"a6cafbcb-0ed8-4c27-b317-1f58ec4e4e92"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 12b6e83e-3a97-42f8-85c5-61d8d22d836f
    status:
      code: 200
      message: ''
- request:
    body: '{"name": "rule1", "properties": {"access": "Allow", "destinationAddressPrefix":
      "11.0.0.0/24", "destinationPortRange": "80", "direction": "Inbound", "priority":
      1000, "protocol": "*", "sourceAddressPrefix": "*", "sourcePortRange": "700-900"}}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      Content-Length:
      - '242'
      Content-Type:
      - application/json
      ParameterSetName:
      - --access --destination-address-prefix --direction --nsg-name -g --source-address-prefix
        -n --source-port-range --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"63b239b9-022f-4f9d-b2e0-3e79c2057e20\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"700-900\",\r\n    \"destinationPortRange\": \"80\",\r\n
        \   \"sourceAddressPrefix\": \"*\",\r\n    \"destinationAddressPrefix\": \"11.0.0.0/24\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\"\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/289593fe-38b5-475f-8b3d-26099aa2c363?api-version=2015-06-15
      cache-control:
      - no-cache
      content-length:
      - '641'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:06 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 62ecf3f0-7bc5-4f90-9d68-c560bef779f1
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 201
      message: ''
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      ParameterSetName:
      - --access --destination-address-prefix --direction --nsg-name -g --source-address-prefix
        -n --source-port-range --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/289593fe-38b5-475f-8b3d-26099aa2c363?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:16 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - a41acd81-4a71-492a-adbc-ca843a5c6a0b
    status:
      code: 200
      message: ''
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      ParameterSetName:
      - --access --destination-address-prefix --direction --nsg-name -g --source-address-prefix
        -n --source-port-range --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"2c9345dc-acba-4b7c-8b3f-69322add4033\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"700-900\",\r\n    \"destinationPortRange\": \"80\",\r\n
        \   \"sourceAddressPrefix\": \"*\",\r\n    \"destinationAddressPrefix\": \"11.0.0.0/24\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\"\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '642'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:16 GMT
      etag:
      - W/"2c9345dc-acba-4b7c-8b3f-69322add4033"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - e2225d60-9bd3-4f8a-9254-0a85a7f3ff36
    status:
      code: 200
      message: ''
- request:
    body: null
    headers:
      Accept:
      - application/json, text/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefix --nsg-name -g --source-address-prefix -n --source-port-range
        --destination-port-range
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"2c9345dc-acba-4b7c-8b3f-69322add4033\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"700-900\",\r\n    \"destinationPortRange\": \"80\",\r\n
        \   \"sourceAddressPrefix\": \"*\",\r\n    \"destinationAddressPrefix\": \"11.0.0.0/24\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\"\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '642'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:18 GMT
      etag:
      - W/"2c9345dc-acba-4b7c-8b3f-69322add4033"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 9541daf7-badf-4092-a2ab-a99eee1e41e1
    status:
      code: 200
      message: ''
- request:
    body: '{"id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1",
      "name": "rule1", "etag": "W/\"2c9345dc-acba-4b7c-8b3f-69322add4033\"", "properties":
      {"protocol": "*", "sourcePortRange": "*", "destinationPortRange": "500-1000",
      "sourceAddressPrefix": "10.0.0.0/24", "destinationAddressPrefix": "Internet",
      "access": "Allow", "priority": 1000, "direction": "Inbound", "provisioningState":
      "Succeeded"}}'
    headers:
      Accept:
      - application/json, text/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      Content-Length:
      - '516'
      Content-Type:
      - application/json
      ParameterSetName:
      - --destination-address-prefix --nsg-name -g --source-address-prefix -n --source-port-range
        --destination-port-range
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"9aa4a6c5-9b79-402a-9517-cf4f29d73796\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"destinationPortRange\": \"500-1000\",\r\n
        \   \"sourceAddressPrefix\": \"10.0.0.0/24\",\r\n    \"destinationAddressPrefix\":
        \"Internet\",\r\n    \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n
        \   \"direction\": \"Inbound\"\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/fd75932f-8281-4854-8555-102b6a5827f1?api-version=2015-06-15
      cache-control:
      - no-cache
      content-length:
      - '648'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:20 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - a106983d-14f5-4989-8a10-3ec96baea81b
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 200
      message: ''
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefix --nsg-name -g --source-address-prefix -n --source-port-range
        --destination-port-range
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/fd75932f-8281-4854-8555-102b6a5827f1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:31 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - b81f42b6-ed38-49f1-b090-af521807447b
    status:
      code: 200
      message: ''
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefix --nsg-name -g --source-address-prefix -n --source-port-range
        --destination-port-range
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2015-06-15
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"cb8953dd-a45f-4c0e-b6b3-b181855961ba\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"destinationPortRange\": \"500-1000\",\r\n
        \   \"sourceAddressPrefix\": \"10.0.0.0/24\",\r\n    \"destinationAddressPrefix\":
        \"Internet\",\r\n    \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n
        \   \"direction\": \"Inbound\"\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '649'
      content-type:
      - application/json; charset=utf-8
      date:
      - Thu, 02 Mar 2023 07:09:31 GMT
      etag:
      - W/"cb8953dd-a45f-4c0e-b6b3-b181855961ba"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 1a575029-36ed-40d8-b7c0-743f90ff0f85
    status:
      code: 200
      message: ''
version: 1
